// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CommentTree > renders a loading comment tree 1`] = `
"<div data-v-5d0380ab="">
  <!--v-if-->
  <p data-v-5d0380ab="" class="text-center">Loading comments…</p>
</div>"
`;

exports[`CommentTree > renders an empty comment tree 1`] = `
"<div data-v-5d0380ab="">
  <!--v-if-->
  <transition-group-stub data-v-5d0380ab="" tag="div" name="comment-empty-list" appear="false" persisted="false" css="true" class="mt-2">
    <empty-content-stub data-v-5d0380ab="" icon="comment" descriptionclasses="" inline="true" center="false"></empty-content-stub>
  </transition-group-stub>
</div>"
`;
